fixed footer  done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
         <ion-icon name="people-sharp"></ion-icon>
     </header>
 
+    <nav>
+        
+    </nav>
+
+
+    <footer>
+        <input type="text" placeholder="Escreva aqui...">
+        <ion-icon name="paper-plane-outline"></ion-icon>
+    </footer>
 
 
 
