HTML and css done

--- a/index.html
+++ b/index.html
@@ -21,17 +21,22 @@
         <ion-icon name="people-sharp"></ion-icon>
     </header>
 
+    <div class="fixed0">
+    </div>
+
     <nav>
-        
+        <div>
+            <b>(09:22:28)&nbsp;</b> <span>João&nbsp;</span> para&nbsp; <span>Todos</span>: Bom dia
+        </div>
     </nav>
 
+    <div class="fixed1">
+    </div>
 
     <footer>
         <input type="text" placeholder="Escreva aqui...">
         <ion-icon name="paper-plane-outline"></ion-icon>
     </footer>
-
-
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
