Login & connection working

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <div class="fixed0">
     </div>
 
-    <nav>
-        <div>
-            <b>(09:22:28)&nbsp;</b> <span>João&nbsp;</span> para&nbsp; <span>Todos</span>: Bom dia
-        </div>
+    <nav id="mensagens">
     </nav>
 
     <div class="fixed1">
