--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </div>
 
     <footer>
-        <input type="text" placeholder="Escreva aqui...">
-        <ion-icon name="paper-plane-outline" onclick="enviarMsg()"></ion-icon>
+        <input type="text" placeholder="Escreva aqui..." data-test="input-message">
+        <ion-icon name="paper-plane-outline" onclick="enviarMsg()" data-test="send-message"></ion-icon>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
